# quant-factor-codegen-lora

./: .gitignore  README.md  pyproject.toml  requirements-train.txt  requirements.txt
configs/: lora_qwen3_4b.yaml
data/: sample_quant_code.json
examples/: eval_cases.jsonl  prompt.txt
results/: base_lora_deepseek_light.json
scripts/: analyze_token_lengths.py  build_dataset_report.py  compare_base_lora.py  compare_base_lora_deepseek.py  compare_example_outputs.py  evaluate_deepseek_api.py  evaluate_hf_model.py  evaluate_reference_outputs.py  evaluate_test_set.py  evaluate_test_set_deepseek.py  generate_with_lora.py  merge_test_evaluations.py  plot_loss_curve.py  prepare_sft_dataset.py  train_lora_local.py
src/quant_codegen/: __init__.py  dataset.py  evaluator.py  mock_data.py  quality.py
