[project]
name = "quant-codegen"
version = "0.1.0"
description = "LoRA fine-tuning project for financial quant factor code generation."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]
